# pillow_framework

./: .gitignore  Cargo.toml  LICENSE  README.md
core/colored/: Cargo.toml
core/colored/src/: lib.rs
core/config/: Cargo.toml  pillow.toml
core/config/src/: lib.rs
core/database/: Cargo.toml
core/database/src/: lib.rs
core/database/src/connection/: postgres.rs
core/env/: Cargo.toml
core/fs/: Cargo.toml
core/fs/src/: lib.rs
core/http/: Cargo.toml
core/http/src/: body.rs  controller.rs  cors.rs  futures_handler.rs  handler.rs  header.rs  http_methods.rs  json.rs  lib.rs  middlewares.rs  uri.rs
core/http/src/request/: mod.rs
core/http/src/response/: header.rs  mod.rs  static_files.rs  status_code.rs  view.rs
core/macros/: Cargo.toml
core/macros/src/: lib.rs  main.rs  shared.rs
core/macros/src/controller/: mod.rs
core/macros/src/route/: mod.rs
core/pillow/: Cargo.toml
core/pillow/src/: lib.rs
core/pillow/src/error/: mod.rs
core/pillow/src/fs/: mod.rs
core/pillow/src/http/: mod.rs
core/pillow/src/http/request/: mod.rs
core/pillow/src/http/response/: header.rs  mod.rs  static_files.rs  status_code.rs
core/pillow/src/routing/: router.rs  routes.rs
core/pillow/src/server/: mod.rs
core/pillow/src/session/: mod.rs
core/pillow/src/websocket/: mod.rs
core/routing/: Cargo.toml  README.md
core/routing/src/: lib.rs  route.rs  router.rs  routes.rs  server.rs  subrouter.rs
core/server/: Cargo.toml
core/server/src/: lib.rs  server_http.rs
core/ssl/: Cargo.toml
core/ssl/src/: lib.rs
core/templates/: Cargo.toml
core/templates/src/: lib.rs
examples/: handlebars.rs  jsons.rs  mysql.rs  postgres.rs  simple.rs  simple_app.rs  websocket.rs
examples/forms/: Cargo.toml
examples/forms/resources/views/: index.html
examples/forms/src/: main.rs
examples/macros/: Cargo.toml  pillow.toml
examples/macros/public/: client_w-4b693f516a268445.js  client_w-4b693f516a268445_bg.wasm
examples/macros/resources/views/: index.html  users.tera.html
examples/macros/src/: main.rs
examples/macros/src/routes/: mod.rs  users.rs
examples/prueba_tokio/: Cargo.toml
examples/prueba_tokio/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/ssl/: Cargo.toml  pillow.toml
examples/ssl/cert/: cert.pem  key.pem
examples/ssl/src/: main.rs
examples/vite_pillow/: Cargo.toml  package-lock.json  vite.config.js
examples/vite_pillow/resources/views/: index.html
examples/vite_pillow/src/: main.rs
resources/views/: about.html  contact.hbs  index.html
src/: lib.rs  main.rs
src/cli/: mod.rs
src/database/: mod.rs
src/database/connection/: mod.rs  mysql.rs  postgres.rs
src/database/model/: mod.rs
src/env/: mod.rs
src/http/: controller.rs  http_methods.rs  json.rs  mod.rs
src/http/request/: mod.rs
src/http/response/: header.rs  mod.rs  static_files.rs  view.rs
src/http/router/: mod.rs
src/http/routes/: mod.rs
src/router/: mod.rs  request.rs  response.rs
src/router/request/: mod.rs
src/router/response/: mod.rs  view.rs
src/routing/: mod.rs  route.rs  router.rs  routes.rs
src/server/: mock_test.rs  mod.rs  mod.rs.save.1
views/: index.html  script.js
