[workspace]
members = ["core/*", "examples/*"]

[workspace.package]
version = "0.4.1"
authors = ["SummaryPuppet"]
edition = "2021"
keywords = ["web", "backend"]
license-file = "LISENCE"
categories = ["web-programming::http-server"]
readme = "./README.md"
homepage = "https://github.com/SummaryPuppet/pillow_framework"
documentation = "https://github.com/SummaryPuppet/pillow_framework"
repository = "https://github.com/SummaryPuppet/pillow_framework"

[workspace.dependencies]
pillow-http = { version = "0.4.2", path = "./core/http" }
pillow-fs = { version = "4.0.2", path = "./core/fs" }
pillow-env = { version = "4.1.2", path = "./core/env" }
pillow-routing = { version = "0.4.2", path = "./core/routing" }
pillow-templates = { version = "0.4.1", path = "./core/templates" }
pillow-database = { version = "0.3.0", path = "./core/database" }
pillow_macros = { version = "0.4.0", path = "./core/macros" }
pillow_server = { version = "0.1.0", path = "./core/server" }
pillow-config = { version = "0.1.0", path = "./core/config" }
pillow-ssl = { version = "0.1.0", path = "./core/ssl" }
