[package]
name = "pillow-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
readme = "./README.md"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
colored = "2.0.0"
pillow-fs = { path = "../fs" }
pillow-env = { path = "../env" }
mysql = "23.0.1"
postgres = "0.19.4"
