[package]
name = "pillow-env"
description = ".env file for use in pillow"
authors.workspace = true
version.workspace = true
edition.workspace = true
license = "MIT"
readme = "./README.md"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true


[dependencies]
dotenv = "0.15.0"
