[package]
name = "pillow_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
httparse = "1.8.0"
regex = "1.7.0"
serde_json = "1.0.91"
handlebars = "4.3.6"
pillow_fs = { path = "../fs" }
pillow_templates = { path = "../templates" }
