[package]
name = "pillow-http"
description = "http in pillow"
authors.workspace = true
version = "0.4.2"
edition.workspace = true
license = "MIT"
readme = "./README.md"
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true


[dependencies]
chrono = "0.4.23"
futures = "0.3.25"
httparse = "1.8.0"
regex = "1.7.0"
serde = {version ="1.0.159", features = ["derive"]}
serde_json = "1.0.91"
handlebars = "4.3.6"
pillow-fs = { workspace = true, path = "../fs" }
pillow-templates = { workspace = true, path = "../templates" }
futures-util = "0.3.26"