[package]
name = "pillow_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "macros for pillow"
license = "MIT"
readme = "./README.md"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
name = "pillow_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
