[package]
name = "pillow"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A web framework for rust"
keywords.workspace = true
categories.workspace = true
license-file = "../../LICENSE"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
publish = true
exclude = ["/resources", "/public"]

[lib]
name = "pillow"
path = "src/lib.rs"

[features]
full = ["env", "fs", "templates"]
env = ["pillow-env"]
fs = ["pillow-fs"]
templates = ["pillow-templates"]

[dependencies]
pillow-http = { workspace = true, default-features = false, path = "../http" }
pillow-routing = { workspace = true, path = "../routing" }
pillow-fs = { workspace = true, optional = true,path = "../fs" }
pillow-env = { workspace = true, optional = true, path = "../env" }
pillow-templates = { workspace = true, optional = true, path = "../templates" }

