[package]
name = "pillow"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A web framework for rust"
keywords.workspace = true
categories.workspace = true
license-file = "../../LICENSE"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
publish = true
exclude = ["/resources", "/public"]

[lib]
name = "pillow"
path = "src/lib.rs"

[features]
default = ["http", "routing", "macros"]
full = ["http", "env", "fs", "templates"]
http = ["pillow-http"]
routing = ["pillow-routing"]
env = ["pillow-env"]
fs = ["pillow-fs"]
templates = ["pillow-templates"]
macros = ["pillow_macros"]

[dependencies]
pillow-http = { workspace = true, default-features = true, optional=true, path = "../http" }
pillow-routing = { workspace = true, optional=true, path = "../routing" }
pillow-fs = { workspace = true, optional = true,path = "../fs" }
pillow-env = { workspace = true, optional = true, path = "../env" }
pillow-templates = { workspace = true, optional = true, path = "../templates" }
pillow_macros = { workspace = true, default-features = true, optional=true, path = "../macros" }
