[package]
name = "pillow_routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
colored = "2.0.0"
futures = "0.3.25"
pillow_http = { path = "../http" }
pillow_env = { path = "../env" }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
