[package]
name = "pillow-routing"
description = "Routin in Pillow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
readme = "./README.md"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
regex = "1.7.0"
colored = "2.0.0"
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }
pillow-http = { workspace = true, path = "../http" }
pillow-env = { workspace = true, path = "../env" }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
