[package]
name = "pillow-routing"
description = "Routin in Pillow"
version = "0.4.2"
edition.workspace = true
authors.workspace = true
license = "MIT"
readme = "./README.md"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
regex = "1.7.0"
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }
pillow-http = { workspace = true, path = "../http" }
pillow-env = { workspace = true, path = "../env" }
pillow-config = { workspace = true, path = "../config" }
