[package]
name = "pillow-templates"
description = "Templates options for pillow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
readme = "./README.md"
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
exclude = ["resources"]

[dependencies]
handlebars = "4.3.6"
serde_json = "1.0.91"
tera = "1.17.1"
pillow-fs = { workspace = true, path = "../fs" }
