[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pillow = { path = "../../core/pillow" }
pillow_macros = { path = "../../core/macros" }
serde_json = "*"
tokio = { version = "1.23.0", features = ["full"] }
