[package]
name = "ssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pillow = { path = "../../core/pillow", features = ["full"] }
serde_json = "*"
tokio = { version = "1.23.0", features = ["macros"] }
